fix: pages and rte spacing

--- a/assets/app.css
+++ b/assets/app.css
@@ -545,6 +545,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: auto !important;
 }
 
+.twcss-my-auto {
+  margin-top: auto !important;
+  margin-bottom: auto !important;
+}
+
 .twcss-mb-5 {
   margin-bottom: 1.25rem !important;
 }
@@ -581,6 +586,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 1.25rem !important;
 }
 
+.twcss-mt-8 {
+  margin-top: 2rem !important;
+}
+
 .twcss-block {
   display: block !important;
 }
@@ -591,6 +600,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .twcss-grid {
   display: grid !important;
+}
+
+.twcss-min-h-screen {
+  min-height: 100vh !important;
 }
 
 .twcss-w-\[320px\] {
@@ -633,8 +646,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
 }
 
+.twcss-flex-row {
+  flex-direction: row !important;
+}
+
 .twcss-flex-row-reverse {
   flex-direction: row-reverse !important;
+}
+
+.twcss-flex-col {
+  flex-direction: column !important;
 }
 
 .twcss-flex-col-reverse {
@@ -799,6 +820,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .twcss-text-black {
   --tw-text-opacity: 1 !important;
   color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
+}
+
+.twcss-text-white {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
 }
 
 .twcss-underline {
